--- a/style.css
+++ b/style.css
@@ -99,23 +99,26 @@ form#search_movie button:hover {
   max-height: 150px;
 }
 
-/* Card Link */
-.card-link {
+/* Card Link */ 
+.card .card-action a:not(.btn):not(.btn-large):not(.btn-small):not(.btn-large):not(.btn-floating) {
+  color:#8B0000
+}
+/* .recipe-link {
   display: flex;
   justify-content: center;
-  margin-top: 60%;
-  border: 1px solid black;
+  /* margin-top: 60%; */
+  /* border: 1px solid black;
   border-radius: 5px;
   padding: 10px;
-  text-decoration: none;
-  color: #000000;
-  font-size: 12px;
+  text-decoration: none; */
+  /* font-size: 12px;
   font-weight: bold;
-}
+  background-color:#b90e0a ;}  */
 
 /* Hover effect on the link */
-.card-link:hover {
+.card .card-action a:not(.btn):not(.btn-large):not(.btn-small):not(.btn-large):not(.btn-floating):hover {
   text-decoration: underline;
+  color:#8B0000
 }
 /* Adjusts to the size of screen */
 @media screen and (max-width: 768px) {
