changed form input color

--- a/style.css
+++ b/style.css
@@ -14,14 +14,14 @@ header {
   color: white
 }
 /* Stlye for the search and submit button */
-form#search_movie input{
+/* form#search_movie input{
   padding: 10px;
  font-size: 15px;
   border: 1px solid rgb(8, 8, 8);
   width: 250px;
   background: #fffefe;
   border-radius: 8px;
-}
+} */
 /* Container for submit button to move down line */
 .button{
   padding: 12px;
@@ -43,6 +43,19 @@ form#search_movie button:hover {
  background: #b90e0a;
  color: #dbd9d9;
 }
+
+/*form input style*/
+form#search_movie input{
+  color: white
+}
+
+/*form active color*/
+.input-field .prefix.active,
+.input-field.col .prefix ~ label,
+.input-field.col .prefix ~ .validate ~ label  {
+  color:white
+}
+
 /* Container for the movie titles */
 .Name-Tag {
   text-align: center;
@@ -158,3 +171,4 @@ nav i.link-icon {
 .hidden {
   display: none;
 }
+
