--- a/style.css
+++ b/style.css
@@ -169,6 +169,13 @@ nav i.link-icon {
   flex-wrap: wrap;
 }
 
+/* search results */
+.search-results .error-message {
+  color:#8B0000;
+  text-align: center;
+  font-weight: bold;
+}
+
 /* hides elements */
 .hidden {
   display: none;
